--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/Style.css">
-    <script src="/js/index.js"></script>
+    <link rel="stylesheet" href="./css/Style.css">
+    <script src="./js/index.js"></script>
     <title>Home Page</title>
 </head>
 
-<body onload="getdate()">
+<body onload="callfuns()">
     <div class="wrapper">
         <div class="container">
             <div class="bigbox">
@@ -22,9 +22,13 @@
                     <div class="datetext" id="datetext"></div>
                 </div>
             </div>
+            <div class="bigbox">
+                <div class="timetext" id="weather"></div>
+            </div>
         </div>
     </div>
 
 </body>
+<!-- d2bbc1c33f20a76b7b91d25f42acc8e4 -->
 
 </html>
