--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="./js/index.js"></script>
     <link rel="stylesheet" href="./css/all.min.css" />
 
-    <title>HOLA!</title>s
+    <title>HOLA!</title>
 </head>
 
 <body onload="callfuns()">
