Icon issue fixed

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/Style.css">
     <script src="./js/index.js"></script>
+    <!-- Below for fontawesome -->
     <link rel="stylesheet" href="./css/all.min.css" />
+    <script src="./js/all.min.js"></script>
 
     <title>HOLA!</title>
 </head>
