added space for notes

--- a/index.html
+++ b/index.html
@@ -29,6 +29,38 @@
             <div class="bigbox">
                 <div class="timetext" id="weather"></div>
             </div>
+            <div class="bigbox notesbox">
+                <div class="note">
+                    <div class="noteitem">
+                        <input type="text" class="notetext" name="note1" id="n1" placeholder="put some thoughts.."></input>
+                        <button class="closebtn"><i class="fas fa-times"></i></button>
+                    </div>
+                </div>
+                <div class="note">
+                    <div class="noteitem">
+                        <input type="text" class="notetext" name="note2" id="n2"></input>
+                        <button class="closebtn"><i class="fas fa-times"></i></button>
+                    </div>
+                </div>
+                <div class="note">
+                    <div class="noteitem">
+                        <input type="text" class="notetext" name="note3" id="n3"></input>
+                        <button class="closebtn"><i class="fas fa-times"></i></button>
+                    </div>
+                </div>
+                <div class="note">
+                    <div class="noteitem">
+                        <input type="text" class="notetext" name="note4" id="n4"></input>
+                        <button class="closebtn"><i class="fas fa-times"></i></button>
+                    </div>
+                </div>
+                <div class="note">
+                    <div class="noteitem">
+                        <input type="text" class="notetext" name="note5" id="n5"></input>
+                        <button class="closebtn"><i class="fas fa-times"></i></button>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
