--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/Style.css">
@@ -13,6 +12,9 @@
 </head>
 
 <body onload="callfuns()">
+    <div class="sunbox">
+        <div class="sun" id="sun"></div>
+    </div>
     <div class="wrapper">
         <div class="container">
             <div class="bigbox">
@@ -22,12 +24,15 @@
             </div>
             <div class="bigbox">
                 <div class="timetext daybox">
-                    <div class="daytext" id="daytext">Friday</div>
+                    <div class="daytext" id="daytext"></div>
                     <div class="datetext" id="datetext"></div>
                 </div>
             </div>
             <div class="bigbox">
-                <div class="timetext" id="weather"></div>
+                <div class="timetext daybox">
+                    <div class="daytext" id="temperature"></div>
+                    <div class="datetext" id="weather"></div>
+                </div>
             </div>
             <div class="bigbox notesbox">
                 <div class="note">
